# math5610

./: .gitignore  README.MD  Readme.md  precision.cpp
homework/hw1/Task1/: singleAndDoublePrecision.md
homework/hw1/Task7/: .helloParalleism.cpp.swp  Task7.md  a.out
homework/hw1/Task9/: randomMatrix.cpp
hw1/Task1/: libMath5610.h  main.cpp  singleAndDoublePrecision.cpp  singlePrecision.cpp
hw1/Task6/: doublePrecision.cpp
hw1/Task7/: Task7.md  helloParalleism.cpp
hw1/Task9/: CMakeLists.txt  generateNbyMMatrix.cpp  main.cpp  randomMatrix.cpp
hw2/Task2/: absError.cpp  libMath5610.h  main.cpp
hw2/Task3/: libMath5610.h  main  main.cpp  relError.cpp
hw2/Task4/: CMakeLists.txt  addVector.h
hw2/Task6/: main.cpp
hw2/Task7/: CMakeLists.txt
hw2/Task8/: infinityNormVector.cpp
hw2/task2/: CMakeLists.txt  absError.cpp  main.cpp
hw2/task3/: CMakeLists.txt  relError.h
hw2/task4/: addVector.cpp  main.cpp
hw2/task5/: CMakeLists.txt  main.cpp  scaleVector.cpp  scaleVector.h
hw2/task6/: CMakeLists.txt  twoNormVector.cpp  twoNormVector.h
hw2/task7/: main.cpp  oneNormVector.cpp  oneNormVector.h
hw2/task8/: CMakeLists.txt  infinityNormVector.h  main.cpp
hw2/task9/: generateSymetricNbyNMatrix.h  main.cpp
hw3/lib/: absError1NormVector.h  absErrorInfNormVector.cpp  dotVector.h  infNormMatrix.cpp
hw3/task1/: CMakeLists.txt  absError2NormVector.h  main.cpp
hw3/task2/: CMakeLists.txt  main.cpp
hw3/task3/: CMakeLists.txt  main.cpp
hw3/task4/: CMakeLists.txt  main.cpp  oneNormMatrix.cpp  oneNormMatrix.h
hw3/task5/: CMakeLists.txt  infNormMatrix.cpp  infNormMatrix.h  main.cpp
hw3/task6/: CMakeLists.txt  main.cpp
hw3/task7/: crossProduct3DVector.cpp  crossProduct3DVector.h  main.cpp
hw3/task8/: CMakeLists.txt  main.cpp
hw3/task9/: CMakeLists.txt  generateDiagDom.cpp  generateDiagDom.h
hw4/lib/: absError.h  absError1NormVector.cpp  absErrorInfNormVector.h  dotVector.cpp  generateNbyMMatrix.h  generateSymetricNbyNMatrix.cpp
hw4/matrixVectorProduct/: CMakeLists.txt  main.cpp
hw4/task1/: CMakeLists.txt  main.cpp  scaleMatrix.cpp  scaleMatrix.h
hw4/task2/: CMakeLists.txt  main.cpp  matrixAdd.cpp  matrixAdd.h
hw4/task3/: CMakeLists.txt  main.cpp  outerVector.cpp  outerVector.h
hw4/task4/: CMakeLists.txt  main.cpp  solveDiagonal.cpp  solveDiagonal.h
hw4/task5/: CMakeLists.txt  main.cpp  solveUpperTriangular.cpp  solveUpperTriangular.h
hw4/task6/: CMakeLists.txt  main.cpp  solveLowerTriangular.h
hw4/task7/: CMakeLists.txt  main.cpp  rowEchelon.cpp
hw4/task8/: CMakeLists.txt  main.cpp  rowEchelonSolution.cpp  rowEchelonSolution.h
hw4/task9/: CMakeLists.txt  generateSymDiagDom.h  main.cpp
hw5/task1/: CMakeLists.txt  eliminationBackSubstitution.cpp  eliminationBackSubstitution.h  main.cpp
hw5/task2/: CMakeLists.txt  LUFactorization.cpp  LUFactorization.h  main.cpp
hw5/task3/: CMakeLists.txt  main.cpp  solveLUFactorization.cpp  solveLUFactorization.h
hw5/task4/: CMakeLists.txt  generatePosDef.cpp  generatePosDef.h  main.cpp
hw5/task5/: CMakeLists.txt  CholeskyFactorization.cpp  main.cpp
hw5/task6/: CMakeLists.txt  NaturalEquations.cpp  NaturalEquations.h  main.cpp
hw5/transpose/: CMakeLists.txt  main.cpp  transpose.cpp  transpose.h
lib/: CholeskyFactorization.cpp  CholeskyFactorization.h  absError2NormVector.cpp  generateNbyMMatrix.cpp  generateNbyMMatrix.h  generatePosDef.cpp  generatePosDef.h  generateSymDiagDom.cpp  matrixProduct.cpp  matrixProduct.h  matrixVectorProduct.cpp  rowEchelon.h  solveLowerTriangular.cpp
